<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 SlimRoms Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- General strings -->

    <string name="dlg_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="reset_message">Reset all entries to default?</string>

    <string name="screen_off_gesture_title">Zenmotions</string>
    <string name="group_applications">Applications</string>
    <string name="select_custom_app_title">Select custom application</string>
    <string name="gestures_dashboard_summary">Awesome screen-off gestures</string>
    <string name="enable_gestures_title">Enable gestures</string>
    <string name="enable_gestures_summary">Enable screen off gestures</string>
    <string name="gestures_title">Gestures</string>
    <string name="zenmotions">Zenmotions</string>
    <string name="zenmotions_summary">Gestures and Tweaks for Zenfone</string>
    <string name="gestures">Gestures</string>
    <string name="screen_off_gestures">Screen-off gestures</string>
    <string name="gesture_double_tap_title">Gesture Double Tap</string>
    <string name="gesture_z_title">Gesture Z</string>	
    <string name="gesture_s_title">Gesture S</string>
    <string name="gesture_v_title">Gesture V</string>
    <string name="gesture_w_title">Gesture W</string>
    <string name="gesture_c_title">Gesture C</string>
    <string name="gesture_e_title">Gesture e</string>
    <string name="gesture_up_title">Gesture Swipe Up</string>
    <string name="gesture_down_title">Gesture Swipe Down</string>
    <string name="gesture_left_title">Gesture Swipe Left</string>
    <string name="gesture_right_title">Gesture Swipe Right</string>
    
     <!-- Notification slider -->
    <string name="notification_slider">Notification slider</string>
    <string name="action">Action</string>

    <string name="top_position">Top position</string>
    <string name="middle_position">Middle position</string>
    <string name="bottom_position">Bottom position</string>
    <string name="total_silence">Total silence</string>
    <string name="alarms_only">Alarms only</string>
    <string name="priority_only">Priority only</string>
    <string name="none">All notifications</string>
    <string name="vibrate">Vibrate</string>
    <string name="ring">Ring</string>
    <string name="silent">Silent</string>


    <string name="slider_mode_off">Ring</string>
    <string name="slider_mode_vibrate">Vibrate</string>
    <string name="slider_mode_silent">Silent</string>
    <string name="slider_mode_priority">Priority only</string>
    <string name="slider_mode_alarm">Alarms only</string>
    <string name="slider_mode_dnd">Total silence</string>
    <string name="slider_mode_title_top">Top position</string>
    <string name="slider_mode_title_center">Center position</string>
    <string name="slider_mode_title_bottom">Bottom position</string>


    <string name="buttons_title">Buttons</string>
    <string name="button_swap_title">Swap buttons</string>
    <string name="button_swap_summary">Swap the order of recents and back buttons</string>
    
    <!-- Color Modes-->
	<string name="graphics_title">Graphics</string> 
	<string name="srgb_mode_summary"></string>
	<string name="srgb_mode_title">sRGB mode</string>
        <string name="dci_mode_summary"></string>
        <string name="dci_mode_title">Wide color gammut mode</string>

    <string name="proxi_summary_head">Check proximity sensor for handling gesture and fingerprint sensor</string>
    <string name="proxi_title_head">Proximity check</string>

    <!-- Ambient Display -->
    <string name="ambient_display_title">Ambient display</string>
    <string name="ambient_display_enable_title">Ambient display</string>
    <string name="ambient_display_enable_summary">Wake screen when you receive notifications</string>
    <string name="ambient_display_gestures_title">Ambient display gestures</string>
    <string name="ambient_display_gestures_summary">Additional gestures to wake the screen</string>
    <string name="ambient_display_summary">Wake screen when you receive notifications</string>
    <string name="ambient_display_summary_on">Screen will wake when you receive notifications</string>
    <string name="ambient_display_summary_off">Screen will not wake when you receive notifications</string>

    <!-- Tilt sensor -->
    <string name="tilt_sensor_title">Tilt sensor</string>

    <!-- Pickup sensor -->
    <string name="pickup_sensor_title">Pickup sensor</string>

    <!-- Proximity sensor -->
    <string name="proximity_sensor_title">Proximity sensor</string>

    <!-- Hand wave gesture -->
    <string name="hand_wave_gesture_title">Hand wave</string>
    <string name="hand_wave_gesture_summary">Pulse notifications on hand wave</string>
    <string name="hand_wave_gesture_flat_title">Detect orientation</string>
    <string name="hand_wave_gesture_flat_summary">Pulse only if the phone is lying face up on a flat surface</string>

    <!-- Pick-up gesture -->
    <string name="pick_up_gesture_title">Pick-up</string>
    <string name="pick_up_gesture_summary">Pulse notifications on pick-up</string>

    <!-- Pocket gesture -->
    <string name="pocket_gesture_title">Pocket</string>
    <string name="pocket_gesture_summary">Pulse notifications on removal from pocket</string>

    <!-- Proximity wake -->
    <string name="proximity_wake_title">Proximity wake</string>
    <string name="proximity_wake_enable_title">Proximity wake</string>
    <string name="proximity_wake_enable_summary">Wake device on hand wave</string>

    <!-- Label for feature switch [CHAR LIMIT=30] -->
    <string name="switch_bar_on">On</string>

    <!-- Label for feature switch [CHAR LIMIT=30] -->
    <string name="switch_bar_off">Off</string>

    <!-- Device specific settings -->
    <string name="device_settings_app_name">Advanced settings</string>

    <!-- Device gestures panel -->
    <string name="screen_gestures_panel_title">Gestures</string>

    <!-- Touchscreen gesture haptic feedback -->
    <string name="touchscreen_gesture_extras">Extras</string>
    <string name="touchscreen_gesture_haptic_feedback">Haptic feedback</string>
    <string name="touchscreen_gesture_haptic_feedback_summary">Vibrate when a touchscreen gesture is detected</string>

    <!-- Kcal -->
    <string name="kcal">Display</string>
    <string name="kcal_title">Display color control</string>
    <string name="kcal_summary">Display color calibration using KCAL</string>
    <string name="kcal_enabled_title">Enable KCAL</string>
    <string name="kcal_enabled_summary">Turn on display calibration using KCAL</string>
    <string name="kcal_red">Red</string>
    <string name="kcal_green">Green</string>
    <string name="kcal_blue">Blue</string>
    <string name="kcal_saturation">Saturation</string>
    <string name="kcal_contrast">Constrast</string>
    <string name="menu_reset">Reset</string>
    <string name="kcal_color_temp">Color temperature (K)</string>

</resources>
