<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            android:title="@string/gestures">

        <PreferenceScreen
                android:key="zenmotions"
                android:fragment="com.asus.zenmotions.settings.ScreenOffGestureSettings"
                android:summary="@string/gestures_dashboard_summary"
                android:title="@string/screen_off_gestures" />

    </PreferenceCategory>
	
	
	<PreferenceCategory
            android:title="@string/ambient_display_title">

        <PreferenceScreen
                android:key="ambient_display_gestures"
                android:fragment="com.asus.zenmotions.TouchscreenGesturePreferenceActivity"
                android:summary="@string/ambient_display_gestures_summary"
                android:title="@string/ambient_display_gestures_title" />

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/kcal">

        <PreferenceScreen
                android:key="kcal"
                android:fragment="com.lineageos.settings.lepref.DisplayCalibration"
                android:summary="@string/kcal_summary"
                android:title="@string/kcal_title" />

    </PreferenceCategory>

</PreferenceScreen>
